r code for k-NN

--- a/k-NN.Rmd
+++ b/k-NN.Rmd
@@ -1,6 +1,5 @@
-R code for k-NN data model
+# r code for k-NN data model
 
-# K-Nearest Neighbors (K-NN)
 
 # Importing the dataset
 dataset = read.csv('Social_Network_Ads.csv')
